<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="other_is_sharing_location">%s正在共享位置</string>
    <string name="others_are_sharing_location">%d人正在共享位置</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="rc_ac_file_download_btn">开始下载</string>
    <string name="rc_ac_file_download_open_file_btn">用其他应用打开</string>
    <string name="rc_ac_file_download_preview">文件预览</string>
    <string name="rc_ac_file_download_progress_tv">正在下载...(%1$s/%2$s)</string>
    <string name="rc_ac_file_download_request_permission">您需要在设置里打开读写权限</string>
    <string name="rc_ac_file_download_request_permission_cancel">取消</string>
    <string name="rc_ac_file_download_request_permission_sure">确定</string>
    <string name="rc_ac_file_manager_SD_card">SD卡</string>
    <string name="rc_ac_file_manager_category_audio">音频</string>
    <string name="rc_ac_file_manager_category_file">文档</string>
    <string name="rc_ac_file_manager_category_picture">其他</string>
    <string name="rc_ac_file_manager_category_title">按分类查找</string>
    <string name="rc_ac_file_manager_category_video">视频</string>
    <string name="rc_ac_file_manager_dir_title">按目录查找</string>
    <string name="rc_ac_file_manager_mobile_memory">手机内存</string>
    <string name="rc_ac_file_preview_begin_download">开始下载</string>
    <string name="rc_ac_file_preview_can_not_open_file">无法打开文件</string>
    <string name="rc_ac_file_preview_deleted">文件已过期或已被清理</string>
    <string name="rc_ac_file_preview_download_cancel">已取消下载</string>
    <string name="rc_ac_file_preview_download_error">下载失败</string>
    <string name="rc_ac_file_preview_downloaded">已下载</string>
    <string name="rc_ac_file_send_preview">发文件</string>
    <string name="rc_action_bar_back">返回</string>
    <string name="rc_action_bar_ok">确定</string>
    <string name="rc_ad_file_size">大小:%1$s</string>
    <string name="rc_ad_folder_files_number">%1$s个文件</string>
    <string name="rc_ad_folder_no_files">空文件夹</string>
    <string name="rc_ad_send_file_no_select_file">发送</string>
    <string name="rc_ad_send_file_select_file">发送(%1$s/20)</string>
    <string name="rc_afternoon_format">下午</string>
    <string name="rc_android.permission.ACCESS_COARSE_LOCATION">位置信息</string>
    <string name="rc_android.permission.ACCESS_FINE_LOCATION">位置信息</string>
    <string name="rc_android.permission.CAMERA">相机</string>
    <string name="rc_android.permission.READ_EXTERNAL_STORAGE">存储空间</string>
    <string name="rc_android.permission.RECORD_AUDIO">麦克风</string>
    <string name="rc_android.permission.WRITE_EXTERNAL_STORAGE">存储空间</string>
    <string name="rc_audio_input">按住 说话</string>
    <string name="rc_audio_input_hover">松开 发送</string>
    <string name="rc_blacklist_prompt">您已被加入黑名单</string>
    <string name="rc_called_accept">对方接受了通话请求</string>
    <string name="rc_called_is_calling">对方正在通话中</string>
    <string name="rc_called_not_accept">对方未接听</string>
    <string name="rc_called_on_hook">对方已挂机</string>
    <string name="rc_cancel">取消</string>
    <string name="rc_choose_members">选择联系人</string>
    <string name="rc_confirm">确认</string>
    <string name="rc_conversation_List_operation_failure">操作失败</string>
    <string name="rc_conversation_list_app_public_service">应用公众服务</string>
    <string name="rc_conversation_list_default_discussion_name">讨论组</string>
    <string name="rc_conversation_list_dialog_cancel_top">取消置顶</string>
    <string name="rc_conversation_list_dialog_remove">从会话列表中移除</string>
    <string name="rc_conversation_list_dialog_set_top">置顶该会话</string>
    <string name="rc_conversation_list_empty_prompt">暂无聊天信息</string>
    <string name="rc_conversation_list_my_chatroom">我的聊天室</string>
    <string name="rc_conversation_list_my_customer_service">客服列表</string>
    <string name="rc_conversation_list_my_discussion">我的讨论组</string>
    <string name="rc_conversation_list_my_group">我的群组</string>
    <string name="rc_conversation_list_my_private_conversation">我的私人会话</string>
    <string name="rc_conversation_list_not_connected">尚未连接!</string>
    <string name="rc_conversation_list_popup_cancel_top">取消置顶</string>
    <string name="rc_conversation_list_popup_set_top">已置顶</string>
    <string name="rc_conversation_list_public_service">公众服务</string>
    <string name="rc_conversation_list_system_conversation">系统消息</string>
    <string name="rc_cs_cancel">取消</string>
    <string name="rc_cs_evaluate_human">请对本次服务做出评价</string>
    <string name="rc_cs_evaluate_robot">机器人是否解决了您的问题</string>
    <string name="rc_cs_select_group">请选择咨询内容</string>
    <string name="rc_cs_submit">提交</string>
    <string name="rc_day_format">日</string>
    <string name="rc_daybreak_format">凌晨</string>
    <string name="rc_dialog_button_clear">清空</string>
    <string name="rc_dialog_cancel">取消</string>
    <string name="rc_dialog_item_message_copy">复制消息</string>
    <string name="rc_dialog_item_message_delete">删除消息</string>
    <string name="rc_dialog_item_message_recall">撤回消息</string>
    <string name="rc_dialog_ok">确定</string>
    <string name="rc_discussion_nt_msg_for_add">%1$s 邀请了%2$d位成员加入了讨论组</string>
    <string name="rc_discussion_nt_msg_for_added">%1$s 邀请 %2$s 加入了讨论组</string>
    <string name="rc_discussion_nt_msg_for_exit">%1$s 退出了讨论组</string>
    <string name="rc_discussion_nt_msg_for_is_open_invite_close">%1$s 关闭了成员邀请</string>
    <string name="rc_discussion_nt_msg_for_is_open_invite_open">%1$s 开放了成员邀请</string>
    <string name="rc_discussion_nt_msg_for_removed">你被 %1$s 移出了讨论组</string>
    <string name="rc_discussion_nt_msg_for_rename">%1$s 修改讨论组名称为 %2$s</string>
    <string name="rc_discussion_nt_msg_for_who_removed">%1$s 被 %2$s 移出了讨论组</string>
    <string name="rc_discussion_nt_msg_for_you">你</string>
    <string name="rc_exit_calling">是否退出通话界面？</string>
    <string name="rc_ext_cancel">取消</string>
    <string name="rc_ext_confirm">结束共享</string>
    <string name="rc_ext_exit_location_sharing">是否结束位置共享？</string>
    <string name="rc_ext_location_permission_failed">您需要在设置里打开定位权限</string>
    <string name="rc_ext_send">发送</string>
    <string name="rc_ext_warning">提示</string>
    <string name="rc_file_not_exist">文件不存在</string>
    <string name="rc_forbidden_in_chatroom">你已被禁言，不能发送消息</string>
    <string name="rc_fr_file_category_title_audio">音频</string>
    <string name="rc_fr_file_category_title_other">其他</string>
    <string name="rc_fr_file_category_title_ram">手机内存</string>
    <string name="rc_fr_file_category_title_sd">SD卡</string>
    <string name="rc_fr_file_category_title_text">文本</string>
    <string name="rc_fr_file_category_title_video">视频</string>
    <string name="rc_fr_file_list_most_selected_files">您最多只能选择20个文件</string>
    <string name="rc_fr_loading_file_message">加载中...</string>
    <string name="rc_fr_no_file_message">还没有%1$s文件</string>
    <string name="rc_fr_storage_folder_list_no_files">无法读取%1$s中的文件</string>
    <string name="rc_fr_storage_folder_list_search">搜索</string>
    <string name="rc_friday_format">周五</string>
    <string name="rc_info_forbidden_to_talk">您当前在群组中被禁言</string>
    <string name="rc_info_not_in_chatroom">你不在该聊天室</string>
    <string name="rc_info_not_in_discussion">你不在该讨论组</string>
    <string name="rc_info_not_in_group">你不在该群</string>
    <string name="rc_init_failed">连接客服失败</string>
    <string name="rc_input_send">发送</string>
    <string name="rc_input_voice">按住 说话</string>
    <string name="rc_item_change_group_name">%1$s修改群名称为%2$s</string>
    <string name="rc_item_create_group">创建群组</string>
    <string name="rc_item_created_group">%1$s创建了群组</string>
    <string name="rc_item_dismiss_groups">解散了群组</string>
    <string name="rc_item_divided_string">、</string>
    <string name="rc_item_group_notification_summary">[群组通知]</string>
    <string name="rc_item_invitation">%1$s邀请%2$s加入了群组</string>
    <string name="rc_item_join_group">加入了群组</string>
    <string name="rc_item_quit_groups">退出了群组</string>
    <string name="rc_item_remove_group_after_str">移出了群组</string>
    <string name="rc_item_remove_group_before_str">将</string>
    <string name="rc_item_remove_group_member">%1$s将%2$s移出了群组</string>
    <string name="rc_item_remove_self">%1$s被%2$s移出了群组</string>
    <string name="rc_item_to_join_group">加入了群组</string>
    <string name="rc_item_you">你</string>
    <string name="rc_join_chatroom_failure">加入聊天室失败</string>
    <string name="rc_kicked_from_chatroom">你已被踢出聊天室</string>
    <string name="rc_location_fail">定位失败</string>
    <string name="rc_location_fetching">获取中……</string>
    <string name="rc_location_sharing_ended">位置共享已结束</string>
    <string name="rc_message_content_draft">[草稿]</string>
    <string name="rc_message_content_file">[文件]</string>
    <string name="rc_message_content_image">[图片]</string>
    <string name="rc_message_content_location">[位置]</string>
    <string name="sobot_attach_take_pic">拍照</string>
    <string name="sobot_btn_cancle">取消</string>
    <string name="sobot_button_send">发送</string>
    <string name="sobot_cancel">取消</string>
    <string name="sobot_choice_form_picture">从手机相册选择</string>
    <string name="sobot_current_network">当前网络不可用,请检查网络设置</string>
    <string name="sobot_evaluate_no">未解决</string>
    <string name="sobot_evaluate_yes">已解决</string>
    <string name="sobot_evaluation_decription">您的评价会让我们做得更好</string>
    <string name="sobot_please_evaluate">请您对 [%1$s] 进行评价</string>
    <string name="sobot_question">请问 [%1$s] 是否解决了您的问题？</string>
    <string name="sobot_resendmsg">重新发送</string>
    <string name="sobot_reunicon">点击重新连接</string>
    <string name="sobot_str_bottom_message">留言</string>
    <string name="sobot_str_bottom_satisfaction">评价</string>
    <string name="sobot_upload">图片</string>
    <string name="sobot_welcome">loading</string>
    <string name="cancle">取消</string>
    <string name="commit">确定</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="month">月</string>
    <string name="title">请选择时间</string>
    <string name="year">年</string>
</resources>