<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/text1" android:id="@id/tv_cancle" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancle" android:layout_centerVertical="true" />
        <TextView android:textSize="20.0sp" android:textColor="@color/text1" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" android:layout_centerInParent="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text1" android:id="@id/tv_select" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/commit" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:background="@color/split_line" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:background="@color/background" android:paddingLeft="20.0dip" android:paddingTop="15.0dip" android:paddingRight="20.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <com.huijiemanager.view.DatePickerView android:id="@id/year_pv" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="160.0dip" android:layout_weight="3.0" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text2" android:gravity="center" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/year" android:layout_weight="1.0" />
            <com.huijiemanager.view.DatePickerView android:id="@id/month_pv" android:layout_width="0.0dip" android:layout_height="160.0dip" android:layout_weight="2.0" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text2" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/month" android:layout_weight="1.0" />
            <com.huijiemanager.view.DatePickerView android:id="@id/day_pv" android:layout_width="0.0dip" android:layout_height="160.0dip" android:layout_weight="2.0" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text2" android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/day" android:layout_weight="1.0" />
            <com.huijiemanager.view.DatePickerView android:id="@id/hour_pv" android:layout_width="0.0dip" android:layout_height="160.0dip" android:layout_weight="2.0" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text2" android:gravity="center" android:id="@id/hour_text" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/hour" android:layout_weight="1.0" />
            <com.huijiemanager.view.DatePickerView android:id="@id/minute_pv" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="160.0dip" android:layout_weight="2.0" />
            <TextView android:textSize="18.0sp" android:textColor="@color/text2" android:gravity="center" android:id="@id/minute_text" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/minute" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>