<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffdddddd" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:id="@id/sobot_txt_loading" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/sobot_welcome" android:layout_below="@id/sobot_image_view" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:id="@id/sobot_textReConnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/sobot_current_network" android:layout_below="@id/sobot_image_view" android:layout_centerInParent="true" />
    <ImageView android:id="@id/sobot_icon_nonet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:src="@drawable/sobot_icon_nonet" android:layout_above="@id/sobot_textReConnect" android:layout_centerHorizontal="true" android:contentDescription="@null" />
    <Button android:id="@id/sobot_btn_reconnect" android:background="@drawable/sobot_button_style" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/sobot_reunicon" android:layout_below="@id/sobot_textReConnect" android:layout_centerHorizontal="true" />
</RelativeLayout>