<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/pop_layout" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="@dimen/sobot_text_font_normal" android:id="@id/btn_take_photo" android:background="@drawable/sobot_item_setting_selector" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/sobot_attach_take_pic" />
        <View android:background="@color/sobot_line_1dp" android:layout_width="fill_parent" android:layout_height="0.100000024dip" />
        <Button android:textSize="@dimen/sobot_text_font_normal" android:id="@id/btn_pick_photo" android:background="@drawable/sobot_item_setting_selector" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/sobot_choice_form_picture" />
        <View android:background="#fff0f0f0" android:layout_width="fill_parent" android:layout_height="5.0dip" />
        <Button android:textSize="@dimen/sobot_text_font_normal" android:id="@id/btn_cancel" android:background="@drawable/sobot_item_setting_selector" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/sobot_btn_cancle" />
    </LinearLayout>
</RelativeLayout>