<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/rc_ad_ll_file_list_title" android:background="@color/rc_main_theme" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:id="@id/rc_ad_iv_file_list_go_back" android:background="@drawable/rc_selector_title_back_press" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/rc_ac_file_preview" android:layout_centerVertical="true" />
        <View android:background="#ff0083e0" android:layout_width="1.0dip" android:layout_height="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center|left" android:id="@id/rc_ad_tv_file_list_title" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" android:text="@string/rc_ac_file_send_preview" android:singleLine="true" android:layout_weight="1.0" />
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:layout_gravity="center|right" android:id="@id/rc_ad_tv_file_list_select_state" android:background="@android:color/transparent" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rc_ad_send_file_no_select_file" />
    </LinearLayout>
    <ListView android:id="@id/rc_fm_lv_storage_folder_list_files" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <FrameLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/rc_fm_ll_storage_folder_list_load" android:background="#66000000" android:visibility="gone" android:layout_width="120.0dip" android:layout_height="120.0dip">
            <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/rc_fm_pb_storage_folder_list_load_progress" android:layout_width="37.0dip" android:layout_height="37.0dip" android:layout_marginTop="28.0dip" android:layout_marginBottom="16.0dip" style="?android:attr/progressBarStyleLarge" />
            <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/rc_fm_tv_storage_folder_list_load_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rc_fr_loading_file_message" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:layout_gravity="center" android:id="@id/rc_fm_tv_no_file_message" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>